--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 	<body>
 		<div id="loading">LOADING...</div>
 		<div id="menu">
-			<div class="container">
+			<div class="menu-container">
 				<div onclick="changeCategory(this)" name="buildings" class="selectCategory selected">Buildings</div>
 				<div onclick="changeCategory(this)" name="resources" class="selectCategory">Resources</div>
 				<div onclick="changeCategory(this)" name="hats" class="selectCategory">Hats</div>
 				<div onclick="changeCategory(this)" name="access" class="selectCategory">Accessories</div>
 				<div onclick="changeCategory(this)" name="weapons" class="selectCategory">Weapons</div>
+				<div onclick="changeCategory(this)" name="projectiles" class="selectCategory">Projectiles</div>
 				<div onclick="changeCategory(this)" name="player" class="selectCategory">Player</div>
 				<div onclick="changeCategory(this)" name="animals" class="selectCategory">Animals</div>
 				<div onclick="changeCategory(this)" name="background" class="selectCategory">Background</div>
 			</div>
-			<div class="container">
+			<div class="menu-container">
 				<div id="canvasContainer">
 					<div id="canvasBackground"></div>
 					<div id="canvasBackgroundFilter"></div>
@@ -42,30 +43,35 @@
 				<div onclick="copy()" id="copy" class="button">Copy</div>
 				<div onclick="save()" class="button">Save</div>
 			</div>
-			<div class="container" style="height: 100%; justify-content: start">
+			<div class="menu-container" style="height: 100%; justify-content: start">
 				<section id="buildings">
-					<div id="buildingsContainer">
+					<div id="buildingsContainer" class="container">
 						<div name="none" class="selectBuilding selected" onclick="selectBuidling(this)"></div>
 					</div>
 				</section>
 				<section id="resources" hidden>
-					<div id="resourcesContainer">
+					<div id="resourcesContainer" class="container">
 						<div name="none" class="selectResource selected" onclick="selectResource(this)"></div>
 					</div>
 				</section>
 				<section id="hats" hidden>
-					<div id="hatsContainer">
+					<div id="hatsContainer" class="container img">
 						<div name="" class="selectHat selected" onclick="selectHat(this)"></div>
 					</div>
 				</section>
 				<section id="access" hidden>
-					<div id="accessContainer">
+					<div id="accessContainer" class="container img">
 						<div name="" class="selectAccess selected" onclick="selectAccess(this)"></div>
 					</div>
 				</section>
 				<section id="weapons" hidden>
-					<div id="weaponsContainer">
+					<div id="weaponsContainer" class="container">
 						<div name="" class="selectWeapon selected" onclick="selectWeapon(this)"></div>
+					</div>
+				</section>
+				<section id="projectiles" hidden>
+					<div id="projectilesContainer" class="container">
+						<div name="" class="selectProjectile selected" onclick="selectProjectile(this)"></div>
 					</div>
 				</section>
 				<section id="player" hidden>
@@ -138,14 +144,17 @@
 						min="0"
 						max="359"
 						style="float: left" />
-					<div id="playerHatsContainer">
+					<div id="playerHatsContainer" class="container img">
 						<div class="selectHat selected" onclick="selectHat(this)"></div>
 					</div>
-					<div id="playerAccessContainer">
+					<div id="playerAccessContainer" class="container img">
 						<div class="selectAccess selected" onclick="selectAccess(this)"></div>
 					</div>
-					<div id="playerWeaponsContainer">
+					<div id="playerWeaponsContainer" class="container">
 						<div class="selectWeapon selected" onclick="selectWeapon(this)"></div>
+					</div>
+					<div id="playerProjectilesContainer" class="container">
+						<div class="selectProjectile selected" onclick="selectProjectile(this)"></div>
 					</div>
 				</section>
 				<section id="animals" hidden>
@@ -166,7 +175,7 @@
 						min="0"
 						max="100"
 						style="float: left" />
-					<div id="animalsContainer">
+					<div id="animalsContainer" class="container img">
 						<div name="none" class="selectAnimal selected" onclick="selectAnimal(this)"></div>
 					</div>
 				</section>
